* Changed sc_error sc_info and sc_debug functions to MACROS.
* Added new "debug" configuration parameter
* White background support
* Fix when undoing :sums that made no sums..
* :w command now adds '.sc' extension if none is specified
* Fix some #include's
* Fix :load command
* Expand filenames using wordexp
* Restored old SC fill function
* Fix in seval calls
* New :fcopy special command

v0.3.0
* FIX when importing large CSV files
* SC-IM now supports wide chars, enabling the use of different alphabets.
  The following alphabets are supported:
  English, Spanish, French, Italian, German, Portuguese, Russian, Ukrainian, Greek, Turkish, Czech, Japanese, Chinese
* Modification in padding of cells and how they are saved in files.
* UNDO / REDO improvements. Now the following actions are supported:
  Change in format of a column as a result of the 'f' command
  Change in format of a column as a result of auto_jus
  Change format of columns as a result of ic dc

v0.2.2
* Added plain text export.
* Added padding between cells.
* Added 256 color support and "redefine_color" special command.
* Added "aa" command in normal mode to act as autojus special command.
* Added "gl" for going to last position in normal mode.
* Added SC-IM man page.
* Added "refresh" special command to refresh UI.
* Big fix in how extended ascii are chars shown.
* Big changes in functions used for showing cell content.
* Fix in autonumeric mode.
* Fix bug when typing real long string (issue #32).
* Fix when using QUIT command with external scripts.
* "cellcolor" command now checks if a locked cell exists prior to change format.
* Locked cells are stored after any other command when saving a file.
* Saving sc file: cellcolor and lock commands now are stored by rows when saving a sc file.
* "Pv" command now do not paste cellcolors.
* Translated source code comments to English.
* Various fixes when using SC-IM without UI (--nocurses).