@@ -64,5 +64,6 @@ void auto_justify(int ci, int cf, int min);
 void valueize_area(int sr, int sc, int er, int ec);
 void sync_refs();
 int fcopy();
+int fsum();
 int pad(int n, int r1, int c1, int r2, int c2);
 void mark_ent_as_deleted(register struct ent * p);
