@@ -30,6 +30,8 @@ v0.4.0
 * Restored old SC fill function
 * Fix in seval calls
 * New :fcopy special command
+* Added UNDO and LOCK check to fcopy special command. Added fcopy to gram.y
+* sum special command renamed to fsum
 
 v0.3.0
 * FIX when importing large CSV files
